--- a/app/src/main/res/layout/activity_electric_fan_setting.xml
+++ b/app/src/main/res/layout/activity_electric_fan_setting.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/equipment_setting_background" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/equipment_setting_background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginEnd="100dp"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_gravity="end"
             android:layout_marginEnd="160dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:layout_weight="1"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -25,7 +25,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/electric_fan_setting_switch"
-                android:textSize="@dimen/txt_big_large" />
+                android:textSize="@dimen/txt_big_large"/>
 
             <TextView
                 android:id="@+id/equipment_setting_switch"
@@ -36,7 +36,7 @@
                 android:background="@drawable/equipment_setting_arrow_selector"
                 android:focusable="true"
                 android:gravity="center"
-                android:textSize="@dimen/txt_large" />
+                android:textSize="@dimen/txt_large"/>
         </LinearLayout>
 
         <LinearLayout
@@ -45,7 +45,7 @@
             android:layout_gravity="end"
             android:layout_marginEnd="160dp"
             android:layout_weight="1"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -53,7 +53,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/electric_fan_setting_air_volume"
-                android:textSize="@dimen/txt_big_large" />
+                android:textSize="@dimen/txt_big_large"/>
 
             <TextView
                 android:id="@+id/equipment_setting_air_volume"
@@ -64,7 +64,7 @@
                 android:background="@drawable/equipment_setting_arrow_selector"
                 android:focusable="true"
                 android:gravity="center"
-                android:textSize="@dimen/txt_large" />
+                android:textSize="@dimen/txt_large"/>
         </LinearLayout>
 
         <LinearLayout
@@ -73,7 +73,7 @@
             android:layout_gravity="end"
             android:layout_marginEnd="160dp"
             android:layout_weight="1"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -81,7 +81,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/electric_fan_setting_air_direction"
-                android:textSize="@dimen/txt_big_large" />
+                android:textSize="@dimen/txt_big_large"/>
 
             <TextView
                 android:id="@+id/equipment_setting_air_direction"
@@ -92,7 +92,7 @@
                 android:background="@drawable/equipment_setting_arrow_selector"
                 android:focusable="true"
                 android:gravity="center"
-                android:textSize="@dimen/txt_large" />
+                android:textSize="@dimen/txt_large"/>
         </LinearLayout>
 
         <LinearLayout
@@ -101,7 +101,7 @@
             android:layout_gravity="end"
             android:layout_marginEnd="160dp"
             android:layout_weight="1"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -109,7 +109,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/electric_fan_setting_time"
-                android:textSize="@dimen/txt_big_large" />
+                android:textSize="@dimen/txt_big_large"/>
 
             <TextView
                 android:id="@+id/equipment_setting_time"
@@ -120,22 +120,37 @@
                 android:background="@drawable/equipment_setting_arrow_selector"
                 android:focusable="true"
                 android:gravity="center"
-                android:textSize="@dimen/txt_large" />
+                android:textSize="@dimen/txt_large"/>
         </LinearLayout>
 
-        <Button
-            android:id="@+id/equipment_setting_confirm"
-            android:layout_width="240dp"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_gravity="end"
-            android:layout_marginBottom="40dp"
-            android:layout_marginEnd="150dp"
-            android:layout_weight="0.5"
-            android:background="@drawable/equipment_setting_confirm_selector"
-            android:focusable="true"
-            android:gravity="center"
-            android:text="@string/electric_fan_setting_confirm"
-            android:textSize="@dimen/txt_big_large" />
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/elec_fan_health_mode_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/electric_fan_health_mode_txt"
+                android:textSize="@dimen/txt_big_large"
+                android:layout_marginStart="162dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"/>
+
+            <Button
+                android:id="@+id/equipment_setting_confirm"
+                android:layout_width="240dp"
+                android:layout_height="80dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="145dp"
+                android:background="@drawable/equipment_setting_confirm_selector"
+                android:focusable="true"
+                android:text="@string/electric_fan_setting_confirm"
+                android:textSize="@dimen/txt_big_large"/>
+        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
