--- a/app/src/main/res/layout/activity_freezer.xml
+++ b/app/src/main/res/layout/activity_freezer.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/freezer_setting"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.skyworth.yunintelligentcontrol.activity.FreezerSettingActivity">
+    android:focusable="true"
+    android:background="@drawable/freezer_setting_background">
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="80dp"
+        android:layout_marginLeft="80dp"
+        android:text="@string/electric_fan_setting_health_mode"
+        android:textSize="@dimen/txt_big_large"/>
+</LinearLayout>
