--- a/app/src/main/res/layout/activtiy_electric_fan.xml
+++ b/app/src/main/res/layout/activtiy_electric_fan.xml
@@ -98,7 +98,7 @@
         android:layout_height="80dp"
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
-        android:background="@drawable/equipment_setting_confirm_selector"
+        android:background="@drawable/btn_selector"
         android:focusable="true"
         android:gravity="center"
         android:text="@string/electric_fan_confirm"
