--- a/app/src/main/res/layout/activity_freezer_setting.xml
+++ b/app/src/main/res/layout/activity_freezer_setting.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/freezer_setting"
+    xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/freezer_setting_background">
