--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/home_ground_img" >
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/home_ground_img">
 
     <ImageView
         android:id="@+id/equipment_management_center"
@@ -15,7 +15,7 @@
         android:background="@drawable/equipment_selector"
         android:contentDescription="@string/equipment_management_center"
         android:focusable="true"
-        android:padding="20dp" />
+        android:padding="20dp"/>
 
     <ImageView
         android:id="@+id/night"
@@ -27,19 +27,32 @@
         android:background="@drawable/night_selector"
         android:contentDescription="@string/night_mode"
         android:focusable="true"
-        android:padding="20dp" />
+        android:padding="20dp"/>
+
+    <ImageView
+        android:id="@+id/daytime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_toStartOf="@id/equipment_management_center"
+        android:background="@drawable/daytime_selector"
+        android:contentDescription="@string/night_mode"
+        android:focusable="true"
+        android:visibility="gone"
+        android:padding="20dp"/>
 
     <com.skyworth.yunintelligentcontrol.view.recyclewheelview.RecycleWheelView
         android:id="@+id/rv_wheel"
         android:layout_width="1080dp"
         android:layout_height="1080dp"
         android:layout_centerInParent="true"
-        android:layout_marginTop="240dp"
-        android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="240dp"
         android:focusable="true"
         app:recycleWheelLineColor="@color/colorPrimary"
-        app:recycleWheelLineThickness="1dp" >
+        app:recycleWheelLineThickness="1dp">
     </com.skyworth.yunintelligentcontrol.view.recyclewheelview.RecycleWheelView>
 
 </RelativeLayout>
